rewrite tests for Java 8 friendliness and PokemonSet changes
Also ran all unit tests on all US games but Gen 7,
with the following tests failing:
----------
RomHandlerEncounterTest
	area1to1EncountersCatchEmAllANDRandomTypeThemesANDKeepTypeThemesWorks
	area1to1EncountersKeepPrimaryTypeWorks
	location1to1EncountersKeepPrimaryTypeWorks
	area1to1EncountersCatchEmAllANDKeepTypeThemesWorks
	area1to1EncountersCatchEmAllANDRandomTypeThemesWorks
	area1to1EncountersKeepTypeThemesWorks
	location1to1EncountersRandomTypeThemesWorks
	location1to1EncountersCatchEmAllANDRandomTypeThemesWorks
	randomEncountersKeepTypeThemesANDRandomTypeThemesWorks
	location1to1EncountersGivesUniqueReplacementsForEachMonWithRandomTypeThemes
	randomEncountersKeepPrimaryTypeWorks
	randomEncountersKeepTypeThemesWorks
	...
	etc (even more in RomHandlerEncounterTest but if you fix all the above you've
	probably fixed many of unmentioned too)

RomHandlerGraphicsTest
	dumpAllPokemonImages

RomHandlerStarterTest
	fwgTriangleWorksWithRandomBasic
	fwgTriangleWorksWithRandomWithTwoEvos
	uniqueTypesWorksWithCompletelyRandom
	typeTriangleWorksWithRandomWithTwoEvos
	uniqueTypesWorksWithRandomBasic
	uniqueTypesWorksWithRandomWithTwoEvos
	fwgTriangleWorksWithCompletelyRandom

RomHandlerTrainerTest
	keepTypeThemedWorksWithRandomPokemonTypes
	useLocalPokemonGuaranteesLocalPokemonOnly
	uniqueElite4PokemonGivesUniquePokemonToSaidTrainersWithTypeThemes
	uniqueElite4PokemonGivesUniquePokemonToSaidTrainers
	useLocalPokemonAndE4UniquePokesGivesE4NonLocalPokemon
	elite4MembersWithMultipleBattlesGetSameTypeThemeForAll
	uniqueElite4PokemonGivesUniquePokemonToSaidTrainersWithUseLocal
	keepTypeThemedWorks
	addHeldItemsToAllTrainersAndSaveAndLoadGivesThemHeldItems

RomHandlerMiscTest
	restrictedPokemonWithRelativesAlwaysContainsRelatedPokemonFromWrongGeneration
	restrictedPokemonWithRelativesDoesNotContainUnrelatedPokemonFromWrongGeneration

PokemonStaticsTest
	staticPokemonDoNotChangeWithGetAndSet

PokemonSetTest
	unmodifiableS